@@ -11,6 +11,7 @@
 #include <string>
 #include <list>
 
+
 #include "Magick++/Color.h"
 #include "Magick++/Geometry.h"
 #include "Magick++/Include.h"
